# Algolia-Technical-Test

./: CMakeLists.txt  README.md  TODO
src/: logs.cc  logs.hh  main.cc  query_handler.cc  query_handler.hh  timerange.cc  timerange.hh  timestamp.cc  timestamp.hh  toJson.cc  toJson.hh
tests/: test.cc  test.tsv
